syntax="proto3";

package greet;

message Greeting {
    string first_name=1;
    string last_name=2;
}


//unary API message
message GreetRequest{
    Greeting greeting =1;
}
message GreetResponse {
    string result=1;
}


//server streaming API message
message GreetManyTimesRequest{
    Greeting greeting =1;
}
message GreetManyTimesResponse {
    string result=1;
}


//client streaming API message
message LongGreetRequest{
    Greeting greeting =1;
}
message LongGreetResponse {
    string result=1;
}


//bidi streaming API message
message GreetEveryoneRequest{
    Greeting greeting =1;
}
message GreetEveryoneResponse {
    string result=1;
}

service GreetService {
    //unary API
    rpc Greet (GreetRequest) returns (GreetResponse){};

    //server streaming
    rpc GreetManyTimes (GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};

    //client streaming
    rpc LongGreet (stream LongGreetRequest) returns (LongGreetResponse) {};

    //bidi streaming
    rpc GreetEveryone (stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {};
}